--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 h1 {
     text-align: center;
+    font-family: sans-serif;
   }
   
   label {
@@ -14,6 +15,7 @@ h1 {
   button {
     margin-top: 10px;
     margin-right: 10px;
+    margin-bottom: 10px;
   }
   
   #dog-image {
@@ -27,4 +29,9 @@ h1 {
     border: 2px solid black;
     border-radius: 5px;
   }
-  
+.container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
